[gd_scene load_steps=12 format=3 uid="uid://o8miq7xrmnbt"]

[ext_resource type="Script" uid="uid://coqfni23j7fna" path="res://scripts/game_controller.gd" id="1_d13v1"]
[ext_resource type="Texture2D" uid="uid://4o3c3306e13x" path="res://assets/sprites/newtown/newton_ready.png" id="2_d0bm5"]
[ext_resource type="Texture2D" uid="uid://bd7sqrxqdcj80" path="res://assets/ui/receta_texture.png" id="2_jxop5"]
[ext_resource type="Texture2D" uid="uid://cnvxr3055hpum" path="res://assets/sprites/newtown/newton_cooking.png" id="3_5scdt"]
[ext_resource type="Theme" uid="uid://xreggbw3h3yp" path="res://custom_resources/CustomerMessage.tres" id="3_jxop5"]
[ext_resource type="Texture2D" uid="uid://jamwyueec32p" path="res://assets/ui/interact-btn.png" id="6_bmi0g"]
[ext_resource type="Texture2D" uid="uid://ctblitnof5rox" path="res://assets/pastry/recipes/recipe_001_correct.png" id="6_th432"]
[ext_resource type="Texture2D" uid="uid://cgsrm2me5ukx2" path="res://assets/pastry/recipes/recipe_001_gravitational.png" id="7_620rl"]
[ext_resource type="Texture2D" uid="uid://bpv7ib6u2578q" path="res://assets/ui/interact-btn-pressed.png" id="7_qop8h"]
[ext_resource type="Texture2D" uid="uid://w2n3jwjxdr0x" path="res://assets/pastry/recipes/recipe_001_wrong.png" id="7_th432"]
[ext_resource type="LabelSettings" uid="uid://jdv1bfj4iff7" path="res://custom_resources/InteractionButtonLabels.tres" id="8_qop8h"]

[node name="GameController" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_d13v1")

[node name="CurrentSceneContainer" type="Node2D" parent="."]

[node name="MiniGameOverlay" type="Node2D" parent="."]

[node name="NewtonLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TestTextureRect" type="TextureRect" parent="NewtonLayer"]
visible = false
offset_left = 452.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_jxop5")

[node name="FeedbackMessage" type="RichTextLabel" parent="NewtonLayer"]
visible = false
offset_left = 517.0
offset_top = 77.0
offset_right = 1087.0
offset_bottom = 193.0
theme = ExtResource("3_jxop5")
bbcode_enabled = true
text = "Â¡Oops! Casi, pero elegiste la receta equivocada"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutcomeMessage" type="RichTextLabel" parent="NewtonLayer"]
visible = false
offset_left = 517.0
offset_top = 186.0
offset_right = 1087.0
offset_bottom = 246.0
theme = ExtResource("3_jxop5")
bbcode_enabled = true
text = "[color=#C2380E][font_size=35]Perdiste una vida.[/font_size][/color]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewtonReadySprite" type="Sprite2D" parent="NewtonLayer"]
z_index = 100
position = Vector2(978, 472)
scale = Vector2(0.22, 0.22)
texture = ExtResource("2_d0bm5")

[node name="NewtonMoodsSprite" type="Sprite2D" parent="NewtonLayer"]
visible = false
z_index = 99
position = Vector2(804, 471)
scale = Vector2(0.22, 0.22)
texture = ExtResource("3_5scdt")

[node name="CorrectRecipeSprite" type="Sprite2D" parent="NewtonLayer"]
visible = false
z_index = 99
position = Vector2(802, 405)
scale = Vector2(0.732516, 0.740712)
texture = ExtResource("6_th432")

[node name="GravitationalRecipeSprite" type="Sprite2D" parent="NewtonLayer"]
visible = false
z_index = 99
position = Vector2(829, 426)
scale = Vector2(0.732516, 0.740712)
texture = ExtResource("7_620rl")

[node name="WrongRecipeSprite" type="Sprite2D" parent="NewtonLayer"]
visible = false
z_index = 99
position = Vector2(801, 420)
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_th432")

[node name="ContinueBtn" type="TextureButton" parent="NewtonLayer"]
visible = false
z_index = 100
offset_left = 679.0
offset_top = 470.0
offset_right = 930.0
offset_bottom = 549.0
texture_normal = ExtResource("6_bmi0g")
texture_pressed = ExtResource("7_qop8h")

[node name="Label" type="Label" parent="NewtonLayer/ContinueBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continuar"
label_settings = ExtResource("8_qop8h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="NewtonLayer/ContinueBtn" to="." method="_on_continue_btn_pressed"]
